deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-gin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-gin
  template:
    metadata:
      labels:
        app: hello-gin
    spec:
      enableServiceLinks: false
      imagePullSecrets:
        - name: imgcred
      containers:
        - name: hello-gin
          image: harbor.codemowers.eu/atroxix/hello-gin
          ports:
            - containerPort: 8000
              name: http
            - containerPort: 8080
              name: metrics
---
apiVersion: v1
kind: Service
metadata:
  name: hello-gin
  labels:
    app: hello-gin
spec:
  selector:
    app: hello-gin
  ports:
  - protocol: TCP
    port: 8000
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-gin
  annotations:
    kubernetes.io/ingress.class: shared
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/target: traefik.codemowers.ee
spec:
  rules:
  - host: hello-foobar.codemowers.ee
    http:
      paths:
      - pathType: Prefix
        path: "/api/v1/gin"
        backend:
          service:
            name: hello-gin
            port:
              name: http
  tls:
  - hosts:
    - "*.codemowers.ee"
